fix mobile spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -566,7 +566,7 @@ a {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	max-width: 80vw;
+	max-width: 50vw;
 	padding: 1em 2em;
 	margin: 2em;
 	cursor: pointer;
